--- a/wbirdfarm/app/views/casein_shipping_addresses/_form.html.erb
+++ b/wbirdfarm/app/views/casein_shipping_addresses/_form.html.erb
@@ -2,47 +2,58 @@
 
 
 <div class="tfContainer">
-	<%= casein_text_field form, shipping_address, :name %>
+	<%= casein_text_field form, shipping_address, :name, 
+	:casein_label => t('label.shipping_address.name') %>
 </div>
 
 <div class="tfContainer tfContainerSecond">
-	<%= casein_text_field form, shipping_address, :customer_code %>
+	<%= casein_text_field form, shipping_address, :customer_code,
+	:casein_label => t('label.shipping_address.customer_code') %>
 </div>
 
 <div class="tfContainer">
-	<%= casein_text_field form, shipping_address, :code %>
+	<%= casein_text_field form, shipping_address, :code,
+	:casein_label => t('label.shipping_address.code') %>
 </div>
 
 <div class="tfContainer tfContainerSecond">
-	<%= casein_text_field form, shipping_address, :zip_code %>
+	<%= casein_text_field form, shipping_address, :zip_code,
+	:casein_label => t('label.shipping_address.zip_code') %>
 </div>
 
 <div class="tfContainer">
-	<%= casein_text_field form, shipping_address, :address %>
+	<%= casein_text_field form, shipping_address, :address,
+	:casein_label => t('label.shipping_address.address') %>
 </div>
 
 <div class="tfContainer tfContainerSecond">
-	<%= casein_text_field form, shipping_address, :tel %>
+	<%= casein_text_field form, shipping_address, :tel,
+	:casein_label => t('label.shipping_address.tel') %>
 </div>
 
 <div class="tfContainer">
-	<%= casein_text_field form, shipping_address, :fax %>
+	<%= casein_text_field form, shipping_address, :fax,
+	:casein_label => t('label.shipping_address.fax') %>
 </div>
 
 <div class="tfContainer tfContainerSecond">
-	<%= casein_text_field form, shipping_address, :email %>
+	<%= casein_text_field form, shipping_address, :email,
+	:casein_label => t('label.shipping_address.email') %>
 </div>
 
 <div class="tfContainer">
-	<%= casein_check_box form, shipping_address, :is_fixed %>
+	<%= casein_check_box form, shipping_address, :is_fixed,
+	:casein_label => t('label.shipping_address.is_fixed') %>
 </div>
 
 <div class="tfContainer tfContainerSecond">
-	<%= casein_select form, shipping_address, :picking_style, Inventory::PICKING_STYLE, :include_blank => true %>
+	<%= casein_select form, shipping_address, :picking_style, Inventory::PICKING_STYLE, :include_blank => true,
+	:casein_label => t('label.shipping_address.picking_style') %>
 </div>
 
 <div class="tfContainer">
-	<%= casein_select form, shipping_address, :ware_house_id, WareHouse.all.collect{|w| [w.name, w.id]}, {:include_blank => true} %>
+	<%= casein_select form, shipping_address, :ware_house_id, WareHouse.all.collect{|w| [w.name, w.id]}, {:include_blank => true,
+	:casein_label => t('label.shipping_address.ware_house')} %>
 </div>
 
 
