--- a/wbirdfarm/app/views/edi/_edi_class_list.html.erb
+++ b/wbirdfarm/app/views/edi/_edi_class_list.html.erb
@@ -25,25 +25,26 @@
 	</table>
 </div>
 <div class="part">
-<table width="100%">
-<thead>
-	<tr>
-		<th><%= t('label.edi.class_name') %></th>
-		<th><%= t('label.edi.status') %></th>
-		<th><%= t('label.edi.last_edi_at') %></th>
-		<th><%= t('label.edi.rake_name') %></th>
-	</tr>
-</thead>
-<tbody>
+	<table width="100%">
+	<thead>
+		<tr>
+			<th><%= t('label.edi.class_name') %></th>
+			<th><%= t('label.edi.status') %></th>
+			<th><%= t('label.edi.last_edi_at') %></th>
+			<th><%= t('label.edi.rake_name') %></th>
+		</tr>
+	</thead>
+	<tbody>
 	<% EdiFile::EDI_OUT_TYPE.each do |name, tag| %>
 		<tr>
 			<td><%= name %></td>
 			<td><%= EdiFile.show_status(tag) %></td>
 			<td><%= show_time EdiFile.last_edi_at(tag) %></td>
-			<td class="num"><%= button_to_remote '実行', :url => {:action => 'edi_start', :tag => tag} %></td>
+			<td class="num"><%= button_to_remote '実行', 
+				:url => {:action => 'edi_start', :tag => tag} %></td>
 		</tr>
 	<% end %>
-</tbody>
-</table>
+	</tbody>
+	</table>
 </div>
 </div>
