--- a/wbirdfarm/app/views/picking_plan/_inv_control.html.erb
+++ b/wbirdfarm/app/views/picking_plan/_inv_control.html.erb
@@ -1,8 +1,9 @@
+<h1>ピッキング指示(手動操作)</h1>
 <div class="list">
 	<table width="80%">
 		<thead>
-			<th></th>
-			<th></th>
+			<td></td>
+			<td></td>
 		</thead>
 		<tbody>
 			<tr>
@@ -25,19 +26,16 @@
 					<%= button_to_remote '実行', :url => {:action => 'allocate_total'} %>
 				</td>
 			</tr>
-
-			<% form_remote_tag :url => {:action => :change_picking_style} do %>
-			<tr>
-				<td>
-					顧客単位ピッキング方式変更
-					<%= select_tag :customer_code ,options_for_select(customer_list + [''], @customer_code) %>
-					<%= select_tag :picking_style ,options_for_select(Inventory::PICKING_STYLE + [''], @picking_style)  %>
-				</td>
-				<td class="num">
-					<%= submit_tag "変更" %>
-				</td>
-			</tr>
-			<% end %>
 		</tbody>
 	</table>
+</div>
+<br/>
+<h1>ピッキング方式変更</h1>
+<div class="panel">
+<% form_remote_tag :url => {:action => :change_picking_style} do %>
+	顧客単位ピッキング方式変更
+	<%= select_tag :customer_code ,options_for_select(customer_list + [''], @customer_code) %>
+	<%= select_tag :picking_style ,options_for_select(Inventory::PICKING_STYLE + [''], @picking_style)  %>
+	<%= submit_tag "変更" %>
+<% end %>
 </div>
